--- a/src/renderer/locales/en-US.json
+++ b/src/renderer/locales/en-US.json
@@ -16,6 +16,61 @@
   "digitalWriteText": "digital write pin %1 to %2",
   "digitalReadText": "digital read pin %1",
   
+  "_comment_block_fields": "Block fields",
+  "delay": "delay",
+  "milliseconds": "milliseconds",
+  "digital_write_pin": "digital write pin",
+  "to": "to",
+  "digital_read_pin": "digital read pin",
+  "declare": "declare",
+  "set": "set",
+  "initialize_mpu6050": "🔧 Initialize MPU6050",
+  "scl": "SCL:",
+  "sda": "SDA:",
+  "acceleration_x": "📊 Acceleration - X",
+  "acceleration_y": "📊 Acceleration - Y",
+  "acceleration_z": "📊 Acceleration - Z",
+  "gyro_x": "🔄 Gyro - X",
+  "gyro_y": "🔄 Gyro - Y",
+  "gyro_z": "🔄 Gyro - Z",
+  "pressure": "📊 Pressure",
+  "temperature": "🌡️ Temperature",
+  "altitude": "📏 Altitude", 
+  "initialize_bmp180": "🔧 Initialize BMP180",
+  "initialize_bh1750": "💡 Initialize BH1750",
+  "light_level_lux": "☀️ Light Level (lux)",
+  "configure_bh1750_mode": "⚙️ Configure BH1750 mode:",
+  "start_bh1750": "🚀 Start BH1750",
+  "include_library": "📚 Include library",
+  "include_basic_arduino": "📚 Include basic Arduino libraries",
+  "include_wire": "📚 Include Wire library (I2C)",
+  "include_adafruit": "📚 AdaFruit Library",
+  "initialize_hmc5883": "🧭 Initialize HMC5883",
+  "hmc5883_begin": "🚀 HMC5883 Begin",
+  "magnetic_field_x": "🧲 Magnetic Field - X",
+  "magnetic_field_y": "🧲 Magnetic Field - Y",
+  "magnetic_field_z": "🧲 Magnetic Field - Z",
+  "compass_heading": "🧭 Compass Heading (degrees)",
+  "initialize_dht": "🔧 Initialize DHT",
+  "on_pin": "on pin",
+  "dht_temperature": "🌡️ DHT Temperature",
+  "dht_humidity": "💧 DHT Humidity", 
+  "dht_begin": "🚀 DHT Begin",
+  "calculate_heat_index": "🌡️🔥 Calculate Heat Index",
+  "temperature_input": "Temperature:",
+  "humidity_input": "Humidity:",
+  "condition_input": "Condition:",
+  "hmc5883_initializer": "🧭 HMC5883 Initializer",
+  "configure_hmc5883_gain": "⚙️ Configure HMC5883 Gain:",
+  "magnetic_declination": "🌍 Magnetic Declination:",
+  "degrees": "degrees",
+  "cardinal_direction": "🧭 Cardinal Direction:",
+  "sensor_hmc5883": "🔍 HMC5883 Sensor:",
+  "display_sensor_hmc5883": "📋 HMC5883 Sensor Display",
+  "correct_heading": "🧭 Correct heading",
+  "declination_input": "declination:",
+  "convert_to_degrees": "convert to degrees",
+  
   "_comment_categories": "Toolbox Categories",
   "CAT_LOGIC": "Logic",
   "CAT_CONTROL": "Control",
