--- a/src/renderer/locales/pt-BR.json
+++ b/src/renderer/locales/pt-BR.json
@@ -16,6 +16,61 @@
   "digitalWriteText": "escrever no pino digital %1 o valor %2",
   "digitalReadText": "ler o pino digital %1",
   
+  "_comment_block_fields": "Campos dos blocos",
+  "delay": "atraso",
+  "milliseconds": "milissegundos",
+  "digital_write_pin": "escrever no pino digital",
+  "to": "para",
+  "digital_read_pin": "ler pino digital",
+  "declare": "declarar",
+  "set": "definir",
+  "initialize_mpu6050": "🔧 Inicializar MPU6050",
+  "scl": "SCL:",
+  "sda": "SDA:",
+  "acceleration_x": "📊 Aceleração - X",
+  "acceleration_y": "📊 Aceleração - Y",
+  "acceleration_z": "📊 Aceleração - Z",
+  "gyro_x": "🔄 Giro - X",
+  "gyro_y": "🔄 Giro - Y", 
+  "gyro_z": "🔄 Giro - Z",
+  "pressure": "📊 Pressão",
+  "temperature": "🌡️ Temperatura", 
+  "altitude": "📏 Altura",
+  "initialize_bmp180": "🔧 Inicializar BMP180",
+  "initialize_bh1750": "💡 Inicializar BH1750",
+  "light_level_lux": "☀️ Luminosidade (lux)",
+  "configure_bh1750_mode": "⚙️ Configurar modo BH1750:",
+  "start_bh1750": "🚀 Iniciar BH1750",
+  "include_library": "📚 Incluir biblioteca",
+  "include_basic_arduino": "📚 Incluir bibliotecas básicas Arduino",
+  "include_wire": "📚 Incluir biblioteca Wire (I2C)",
+  "include_adafruit": "📚 Biblioteca AdaFruit",
+  "initialize_hmc5883": "🧭 Inicializar HMC5883",
+  "hmc5883_begin": "🚀 HMC5883 Begin",
+  "magnetic_field_x": "🧲 Campo Magnético - X",
+  "magnetic_field_y": "🧲 Campo Magnético - Y",
+  "magnetic_field_z": "🧲 Campo Magnético - Z",
+  "compass_heading": "🧭 Direção da Bússola (graus)",
+  "initialize_dht": "🔧 Inicializar DHT",
+  "on_pin": "no pino",
+  "dht_temperature": "🌡️ Temperatura DHT",
+  "dht_humidity": "💧 Umidade DHT",
+  "dht_begin": "🚀 DHT Begin",
+  "calculate_heat_index": "🌡️🔥 Calcular Índice de Calor",
+  "temperature_input": "Temperatura:",
+  "humidity_input": "Umidade:",
+  "condition_input": "Condição:",
+  "hmc5883_initializer": "🧭 Inicializador HMC5883",
+  "configure_hmc5883_gain": "⚙️ Configurar Ganho HMC5883:",
+  "magnetic_declination": "🌍 Declinação Magnética:",
+  "degrees": "graus",
+  "cardinal_direction": "🧭 Direção Cardinal:",
+  "sensor_hmc5883": "🔍 Sensor HMC5883:",
+  "display_sensor_hmc5883": "📋 Display do Sensor HMC5883",
+  "correct_heading": "🧭 Corrigir direção",
+  "declination_input": "declinação:",
+  "convert_to_degrees": "converter para graus",
+  
   "_comment_categories": "Categorias do Toolbox",
   "CAT_LOGIC": "Lógica",
   "CAT_CONTROL": "Controle",
