Modal in Upload

--- a/src/renderer/locales/en-US.json
+++ b/src/renderer/locales/en-US.json
@@ -7,6 +7,15 @@
   "copyCodeTooltip": "Copy code",
   "copiedTooltip": "Copied!",
   "copyFeedback": "Code copied to clipboard!",
+  "examplesButton": "Examples",
+  "examplesTooltip": "Open Arduino examples gallery",
+  "examplesModalTitle": "Arduino Examples",
+  "examplesDescription": "Select a sensor to load the example code:",
+  "mpu6050Description": "Accelerometer and Gyroscope",
+  "bmp180Description": "Pressure and Temperature",
+  "bh1750Description": "Light Sensor",
+  "hmc5883Description": "Magnetometer (Compass)",
+  "dht11Description": "Temperature and Humidity",
   "darkModeTooltip": "Toggle dark mode",
   "darkModeTooltipLight": "Toggle light mode",
   "languageTooltip": "Change language",
