--- a/src/renderer/locales/pt-BR.json
+++ b/src/renderer/locales/pt-BR.json
@@ -7,6 +7,15 @@
   "copyCodeTooltip": "Copiar código",
   "copiedTooltip": "Copiado!",
   "copyFeedback": "Código copiado para a área de transferência!",
+  "examplesButton": "Exemplos",
+  "examplesTooltip": "Abrir galeria de exemplos Arduino",
+  "examplesModalTitle": "Exemplos Arduino",
+  "examplesDescription": "Selecione um sensor para carregar o código de exemplo:",
+  "mpu6050Description": "Acelerômetro e Giroscópio",
+  "bmp180Description": "Pressão e Temperatura",
+  "bh1750Description": "Sensor de Luminosidade",
+  "hmc5883Description": "Magnetômetro (Bússola)",
+  "dht11Description": "Temperatura e Umidade",
   "darkModeTooltip": "Alternar tema escuro",
   "darkModeTooltipLight": "Alternar tema claro",
   "languageTooltip": "Alterar idioma",
