--- a/src/renderer/locales/en-US.json
+++ b/src/renderer/locales/en-US.json
@@ -169,5 +169,68 @@
   "library_sensor": "📡 Generic Sensor",
   "library_bmp180": "🌡️ BMP180",
   "library_mpu6050": "🚀 MPU6050", 
-  "library_dht": "💧 DHT"
+  "library_dht": "💧 DHT",
+  
+  "_comment_buttons": "Interface buttons",
+  "executeButton": "Run",
+  "copyButton": "Copy",
+  
+  "_comment_arduino_modal": "Arduino CLI Modal",
+  "arduinoModalTitle": "Arduino Development Environment",
+  "arduinoModalSubtitle": "Compile, Upload & Monitor",
+  "connectionStatus": "Connection Status",
+  "connected": "Connected",
+  "disconnected": "Disconnected",
+  "uploadTab": "Upload",
+  "consoleTab": "Console",
+  "plotterTab": "Serial Plotter", 
+  "codeTab": "Code",
+  "uploadCompilation": "Upload & Compilation",
+  "serialConsole": "Serial Console",
+  "serialPlotter": "Serial Plotter",
+  "boardConfiguration": "Board Configuration",
+  "boardType": "Board Type",
+  "uploadPort": "Upload Port",
+  "selectPort": "Select port...",
+  "actions": "Actions",
+  "uploadCode": "Upload Code",
+  "compileCode": "Compile",
+  "ready": "Ready",
+  "active": "Active",
+  "waitingData": "Waiting for data",
+  "backendOffline": "Backend Offline",
+  "backendOnline": "Backend Online",
+  "startBackend": "Start Backend", 
+  "stopBackend": "Stop Backend",
+  "serialPort": "Serial Port",
+  "baudRate": "Baud Rate",
+  "connectButton": "Connect",
+  "statistics": "Statistics",
+  "messages": "Messages", 
+  "status": "Status",
+  "connecting": "Connecting...",
+  "portsAvailable": "port(s) available",
+  
+  "_comment_additional_ui": "Additional UI elements",
+  "refresh": "Refresh",
+  "send": "Send",
+  "pause": "Pause", 
+  "clear": "Clear",
+  "exportCsv": "Export CSV",
+  "download": "Download",
+  "copy": "Copy",
+  "example": "Example", 
+  "commandPlaceholder": "Type a command to send to ESP32...",
+  "plotterEmpty": "Connect to ESP32 and send sensor data to see the chart",
+  "formatExpected": "Expected format: AX,AY,AZ,GX,GY,GZ (comma-separated values)",
+  "exampleFormat": "Example: 1.23,2.34,3.45,0.56,0.67,0.78",
+  "compilationLogs": "Compilation Logs",
+  "clickUpload": "Click \"Upload\" to see logs",
+  "serialConsoleEmpty": "Connect to a serial port",
+  "noCode": "No code generated yet",
+  "useBlockEditor": "Use the block editor to create your Arduino program",
+  "autoConvert": "Blocks will be automatically converted to C++ code",
+  "searchTip": "Use Ctrl+F to search in code, or scroll horizontally if needed",
+  "addSetupLoop": "Add setup() and loop() blocks",
+  "examples": "Examples"
 }
