--- a/src/renderer/locales/pt-BR.json
+++ b/src/renderer/locales/pt-BR.json
@@ -169,5 +169,68 @@
   "library_sensor": "📡 Sensor Genérico",
   "library_bmp180": "🌡️ BMP180",
   "library_mpu6050": "🚀 MPU6050",
-  "library_dht": "💧 DHT"
+  "library_dht": "💧 DHT",
+  
+  "_comment_buttons": "Botões da interface",
+  "executeButton": "Executar",
+  "copyButton": "Copiar",
+  
+  "_comment_arduino_modal": "Modal Arduino CLI",
+  "arduinoModalTitle": "Arduino Development Environment",
+  "arduinoModalSubtitle": "Compile, Upload & Monitor",
+  "connectionStatus": "Status da Conexão",
+  "connected": "Conectado",
+  "disconnected": "Desconectado",
+  "uploadTab": "Upload",
+  "consoleTab": "Console",
+  "plotterTab": "Serial Plotter",
+  "codeTab": "Código",
+  "uploadCompilation": "Upload & Compilação",
+  "serialConsole": "Console Serial",
+  "serialPlotter": "Serial Plotter",
+  "boardConfiguration": "Configuração da Placa",
+  "boardType": "Tipo de Placa",
+  "uploadPort": "Porta de Upload",
+  "selectPort": "Selecionar porta...",
+  "actions": "Ações",
+  "uploadCode": "Upload Código",
+  "compileCode": "Compilar",
+  "ready": "Pronto",
+  "active": "Ativo",
+  "waitingData": "Aguardando dados",
+  "backendOffline": "Backend Offline",
+  "backendOnline": "Backend Online", 
+  "startBackend": "Iniciar Backend",
+  "stopBackend": "Parar Backend",
+  "serialPort": "Porta Serial",
+  "baudRate": "Baud Rate",
+  "connectButton": "Conectar",
+  "statistics": "Estatísticas",
+  "messages": "Mensagens",
+  "status": "Status",
+  "connecting": "Conectando...",
+  "portsAvailable": "porta(s) disponível(eis)",
+  
+  "_comment_additional_ui": "Elementos adicionais da interface",
+  "refresh": "Atualizar",
+  "send": "Enviar", 
+  "pause": "Pausar",
+  "clear": "Limpar",
+  "exportCsv": "Exportar CSV",
+  "download": "Download",
+  "copy": "Copiar",
+  "example": "Exemplo",
+  "commandPlaceholder": "Digite um comando para enviar ao ESP32...",
+  "plotterEmpty": "Conecte ao ESP32 e envie dados do sensor para ver o gráfico",
+  "formatExpected": "Formato esperado: AX,AY,AZ,GX,GY,GZ (valores separados por vírgula)",
+  "exampleFormat": "Exemplo: 1.23,2.34,3.45,0.56,0.67,0.78",
+  "compilationLogs": "Logs de Compilação",
+  "clickUpload": "Clique em \"Upload\" para ver os logs",
+  "serialConsoleEmpty": "Conecte a uma porta serial",
+  "noCode": "Nenhum código foi gerado ainda",
+  "useBlockEditor": "Use o editor de blocos para criar seu programa Arduino",
+  "autoConvert": "Os blocos serão convertidos automaticamente em código C++",
+  "searchTip": "Use Ctrl+F para buscar no código, ou role horizontalmente se necessário",
+  "addSetupLoop": "Adicione os blocos setup() e loop()",
+  "examples": "Exemplos"
 }
