Começando a fase de testes

--- a/src/renderer/locales/en-US.json
+++ b/src/renderer/locales/en-US.json
@@ -197,6 +197,7 @@
   "actions": "Actions",
   "uploadCode": "Upload Code",
   "compileCode": "Compile",
+  "installationLogs": "Installation Logs",
   "ready": "Ready",
   "active": "Active",
   "waitingData": "Waiting for data",
