--- a/src/renderer/locales/pt-BR.json
+++ b/src/renderer/locales/pt-BR.json
@@ -197,6 +197,7 @@
   "actions": "Ações",
   "uploadCode": "Upload Código",
   "compileCode": "Compilar",
+  "installationLogs": "Logs de Instalação",
   "ready": "Pronto",
   "active": "Ativo",
   "waitingData": "Aguardando dados",
