--- a/src/renderer/locales/en-US.json
+++ b/src/renderer/locales/en-US.json
@@ -109,6 +109,35 @@
   "CAT_LIBRARIES": "Libraries",
   "CAT_SENSORS": "Sensors",
   
+  "_comment_logic_blocks": "Logic Blocks",
+  "controls_switch": "🔀 switch",
+  "controls_switch_tooltip": "Switch structure - add case and default blocks inside for multiple conditions",
+  "controls_case": "case",
+  "controls_case_tooltip": "Individual case - specify the value and add code to execute",
+  "controls_default": "default :",
+  "controls_default_tooltip": "Default case - executed when no case matches the value",
+  "controls_break": "⛔ break;",
+  "controls_break_tooltip": "Breaks the execution of a loop or switch - exits the current structure",
+  "controls_continue": "⏭️ continue;",
+  "controls_continue_tooltip": "Skips to the next loop iteration - ignores remaining code",
+  "controls_return": "↩️ return",
+  "controls_return_tooltip": "Returns a value from the current function and ends its execution",
+  "switch_case": "case",
+  "switch_default": "default:",
+  "switch_value": "switch",
+  "add_case": "Add case",
+  "remove_case": "Remove case",
+  
+  "_comment_calculator": "Calculator Blocks",
+  "serial_available": "Serial.available()",
+  "serial_available_tooltip": "Returns the number of bytes available for reading from the serial port",
+  "read_input_numbers": "Read input numbers",
+  "read_input_numbers_tooltip": "Reads input from serial port, trims whitespace and returns if empty",
+  "find_logical_operator": "Find Logical Operator",
+  "find_logical_operator_tooltip": "Searches for mathematical operators (+, -, *, /) in input string and stores in 'op'",
+  "separate_numbers": "Separate Numbers",
+  "separate_numbers_tooltip": "Separates the two numbers from input string using operator position and converts to float",
+  
   "_comment_sensors": "Aerospace Sensors",
   "CAT_MPU6050": "Inertial Measurements (MPU6050)",
   "CAT_BMP180": "Pressure and Altitude (BMP180)",
@@ -153,6 +182,10 @@
   "bmp180_pressure_tooltip": "Read atmospheric pressure from BMP180 sensor",
   "bmp180_altitude_tooltip": "Calculate altitude based on atmospheric pressure",
   "delay_tooltip": "Pause execution for a specific number of milliseconds",
+  "led_define": "#define",
+  "led_define_tooltip": "Define a constant using #define - ex: #define LED_GREEN 26",
+  "led_builtin_block": "LED Pin",
+  "led_builtin_block_tooltip": "Reference to a pin constant - editable",
   
   "_comment_variables": "Variable System",
   "createVariableButton": "➕ Create New Variable",
