--- a/src/renderer/locales/pt-BR.json
+++ b/src/renderer/locales/pt-BR.json
@@ -109,6 +109,35 @@
   "CAT_LIBRARIES": "Bibliotecas",
   "CAT_SENSORS": "Sensores",
   
+  "_comment_logic_blocks": "Blocos de Lógica",
+  "controls_switch": "🔀 switch",
+  "controls_switch_tooltip": "Estrutura switch - adicione blocos case e default dentro para múltiplas condições",
+  "controls_case": "case",
+  "controls_case_tooltip": "Case individual - especifique o valor e adicione o código a ser executado",
+  "controls_default": "default :",
+  "controls_default_tooltip": "Caso padrão - executado quando nenhum case corresponde ao valor",
+  "controls_break": "⛔ break;",
+  "controls_break_tooltip": "Interrompe a execução de um loop ou switch - sai da estrutura atual",
+  "controls_continue": "⏭️ continue;",
+  "controls_continue_tooltip": "Pula para a próxima iteração do loop - ignora o código restante",
+  "controls_return": "↩️ return",
+  "controls_return_tooltip": "Retorna um valor da função atual e encerra sua execução",
+  "switch_case": "case",
+  "switch_default": "default:",
+  "switch_value": "switch",
+  "add_case": "Adicionar case",
+  "remove_case": "Remover case",
+  
+  "_comment_calculator": "Blocos de Calculadora",
+  "serial_available": "Serial.available()",
+  "serial_available_tooltip": "Retorna o número de bytes disponíveis para leitura na porta serial",
+  "read_input_numbers": "Ler números de entrada",
+  "read_input_numbers_tooltip": "Lê entrada da porta serial, remove espaços em branco e retorna se estiver vazio",
+  "find_logical_operator": "Encontrar Operador Lógico",
+  "find_logical_operator_tooltip": "Procura por operadores matemáticos (+, -, *, /) na string de entrada e armazena em 'op'",
+  "separate_numbers": "Separar Números",
+  "separate_numbers_tooltip": "Separa os dois números da string de entrada usando a posição do operador e converte para float",
+  
   "_comment_sensors": "Sensores Aeroespaciais",
   "CAT_MPU6050": "Medidas Inerciais (MPU6050)",
   "CAT_BMP180": "Pressão e Altitude (BMP180)",
@@ -153,6 +182,10 @@
   "bmp180_pressure_tooltip": "Lê a pressão atmosférica do sensor BMP180",
   "bmp180_altitude_tooltip": "Calcula a altitude baseada na pressão atmosférica",
   "delay_tooltip": "Pausa a execução por um número específico de milissegundos",
+  "led_define": "#define",
+  "led_define_tooltip": "Define uma constante usando #define - ex: #define LED_VERDE 26",
+  "led_builtin_block": "Pino LED",
+  "led_builtin_block_tooltip": "Referência a uma constante de pino - editável",
   
   "_comment_variables": "Sistema de Variáveis",
   "createVariableButton": "➕ Criar Nova Variável",
