--- a/src/renderer/locales/en-US.json
+++ b/src/renderer/locales/en-US.json
@@ -211,7 +211,7 @@
   "copyButton": "Copy",
   
   "_comment_arduino_modal": "Arduino CLI Modal",
-  "arduinoModalTitle": "Arduino Development Environment",
+  "arduinoModalTitle": "IdeiaSpace",
   "arduinoModalSubtitle": "Compile, Upload & Monitor",
   "connectionStatus": "Connection Status",
   "connected": "Connected",
@@ -225,19 +225,28 @@
   "serialPlotter": "Serial Plotter",
   "boardConfiguration": "Board Configuration",
   "boardType": "Board Type",
+  "educationalSatellite": "Educational Satellite",
+  "esp32Wrover": "📡 ESP32 WROVER (PSRAM - 460800 bps)",
+  "boardHelp": "ESP32 Dev Module: High speed, ideal for most projects",
+  "targetBoard": "🔧 Target Board:",
+  "esp32DevModule": "🚀 ESP32 Dev Module (Default - Auto-reset)",
+  "esp32WroverConservative": "📡 ESP32 WROVER (PSRAM + Conservative upload)",
+  "esp32StableMode": "🐌 ESP32 Stable Mode (Slow but reliable upload)",
+  "boardHelpSerial": "💡 <strong>ESP32 Dev Module</strong>: Best for most cases, fast upload<br>📡 <strong>ESP32 WROVER</strong>: Has PSRAM, uses conservative upload<br>🐌 <strong>Stable Mode</strong>: Use if you have \"Packet content transfer stopped\" issues",
   "uploadPort": "Upload Port",
   "selectPort": "Select port...",
   "actions": "Actions",
   "uploadCode": "Upload Code",
   "compileCode": "Compile",
+  "readCode": "Read Code",
   "installationLogs": "Installation Logs",
   "ready": "Ready",
   "active": "Active",
   "waitingData": "Waiting for data",
   "backendOffline": "Backend Offline",
   "backendOnline": "Backend Online",
-  "startBackend": "Start Backend", 
-  "stopBackend": "Stop Backend",
+  "startBackend": "Start Mission", 
+  "stopBackend": "Abort Mission",
   "serialPort": "Serial Port",
   "baudRate": "Baud Rate",
   "connectButton": "Connect",
