--- a/src/renderer/locales/pt-BR.json
+++ b/src/renderer/locales/pt-BR.json
@@ -211,8 +211,8 @@
   "copyButton": "Copiar",
   
   "_comment_arduino_modal": "Modal Arduino CLI",
-  "arduinoModalTitle": "Arduino Development Environment",
-  "arduinoModalSubtitle": "Compile, Upload & Monitor",
+  "arduinoModalTitle": "IdeiaSpace",
+  "arduinoModalSubtitle": "Compilar, Upload & Monitorar",
   "connectionStatus": "Status da Conexão",
   "connected": "Conectado",
   "disconnected": "Desconectado",
@@ -225,19 +225,28 @@
   "serialPlotter": "Serial Plotter",
   "boardConfiguration": "Configuração da Placa",
   "boardType": "Tipo de Placa",
+  "educationalSatellite": "Satélite Educacional",
+  "esp32Wrover": "📡 ESP32 WROVER (PSRAM - 460800 bps)",
+  "boardHelp": "ESP32 Dev Module: Velocidade alta, ideal para a maioria dos projetos",
+  "targetBoard": "🔧 Placa de Destino:",
+  "esp32DevModule": "🚀 ESP32 Dev Module (Padrão - Auto-reset)",
+  "esp32WroverConservative": "📡 ESP32 WROVER (PSRAM + Upload conservativo)",
+  "esp32StableMode": "🐌 ESP32 Modo Estável (Upload lento mas confiável)",
+  "boardHelpSerial": "💡 <strong>ESP32 Dev Module</strong>: Melhor para a maioria dos casos, upload rápido<br>📡 <strong>ESP32 WROVER</strong>: Possui PSRAM, usa upload mais conservativo<br>🐌 <strong>Modo Estável</strong>: Use se tiver problemas de \"Packet content transfer stopped\"",
   "uploadPort": "Porta de Upload",
   "selectPort": "Selecionar porta...",
   "actions": "Ações",
   "uploadCode": "Upload Código",
   "compileCode": "Compilar",
+  "readCode": "Ler Código",
   "installationLogs": "Logs de Instalação",
   "ready": "Pronto",
   "active": "Ativo",
   "waitingData": "Aguardando dados",
   "backendOffline": "Backend Offline",
   "backendOnline": "Backend Online", 
-  "startBackend": "Iniciar Backend",
-  "stopBackend": "Parar Backend",
+  "startBackend": "Iniciar Missão",
+  "stopBackend": "Abordar Missão",
   "serialPort": "Porta Serial",
   "baudRate": "Baud Rate",
   "connectButton": "Conectar",
